# misfinanzasposta

./: README.md  app.js  build.ps1  build.sh  index.html  style.css
.github/workflows/: build.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
