[package]
name = "mis_finanzas_posta"
version = "0.1.0"
description = "Mis Finanzas Posta desktop application"
authors = ["Mis Finanzas Contributors"]
edition = "2021"

[dependencies]
tauri = { version = "1.5", features = ["api-all"] }

[build-dependencies]
tauri-build = { version = "1.5" }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

